--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -7,11 +7,7 @@
 
 name: Ruby
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [ push ]
 
 jobs:
   test:
@@ -19,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['2.6', '2.7', '3.0']
+        ruby-version: ['3.0']
 
     steps:
     - uses: actions/checkout@v2
@@ -31,15 +27,16 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-    - name: Run tests
-      run: bundle exec rubycritic -m 
-    
+    - name: Run ruby critic
+      run: bundle exec rubycritic --no-browser -p ./rubycritic
+
     - name: GitHub Pages v3
       # You may pin to the exact commit or the version.
       # uses: peaceiris/actions-github-pages@b80a30e9bf3c1ec596532c3813f0aff094f555e2
       uses: peaceiris/actions-github-pages@v3.1.12
       with:
+        personal_token: ${{ secrets.PERSONAL_TOKEN }}
         publish_branch: gh_pages
-        publish_dir: tmp/rubycritic
-       
+        publish_dir: ./rubycritic/
+
 
